--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@
     --white-text-38-color: rgba(255, 255, 255, 0.38);
     --white-text-55-color: rgba(255, 255, 255, 0.55);
     --white-text-78-color: rgba(255, 255, 255, 0.78);
+    --white-text-80-color: rgba(255, 255, 255, 0.80);
     --white-text-90-color: rgba(255, 255, 255, 0.90);
     --status-text-color: rgba(255, 165, 55, 0.55);
     --button-color: #FF6E30;
@@ -48,6 +49,7 @@ body {
     justify-content: space-between;
     align-items: center;
     margin-top: 26px;
+    margin-bottom: 26px;
 }
 
 .nav-list {
@@ -96,7 +98,7 @@ body {
 .first-section {
     background-image: url(../img/header-background.png);
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: right bottom;
 }
 
 .first-section-title {
@@ -105,7 +107,7 @@ body {
     font-weight: 500;
     line-height: 70px;
     width: 600px;
-    margin-top: 78px;
+    padding-top: 78px;
 }
 
 .span-point {
@@ -147,6 +149,7 @@ body {
 
 .social-networks-list {
     display: flex;
+    margin-top: 121px;
 }
 
 .first-social-networks {
@@ -164,32 +167,60 @@ body {
 
 /* second section */
 
+.second-part-with-text {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
 .second-section-title {
     color: var(--white-text-90-color);
     font-size: 48px;
     font-weight: 500;
     line-height: 130%;
     margin-top: 200px;
+    margin-bottom: 25px;
 }
 
 .second-section-text {
     color: var(--white-text-55-color);
     font-weight: 500;
     line-height: 30px;
-    margin-top: 25px;
+    width: 427px;
+    margin: 0 auto;
 }
 
 .card-list {
-    margin-top: 110px;
+    margin-top: 90px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 100px;
 }
 
 .card {
     width: 392px;
     border-radius: 15px;
+    padding: 33px;
+}
+
+.card:not(:nth-child(3n)) {
+   margin-right: 24px;
+}
+
+.card:not(:nth-child(-n+3)) {
+    margin-top: 100px;
+}
+
+.app-info {
+    display: flex;
+    align-items: center;
 }
 
 .app-img {
     width: 64px;
+    display: block;
+    margin-right: 30px;
 }
 
 .app-name {
@@ -197,7 +228,6 @@ body {
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 3px;
-    margin-top: 33px;
 }
 
 .app-status {
@@ -207,20 +237,38 @@ body {
 .app-text {
     color: var(--white-text-55-color);
     font-size: 16px;
+    line-height: 30px;
+    margin-top: 30px;
 }
 
-.app-icon:nth-child(2) {
+.app-icon {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.app-icon-wrapper {
+    display: flex;
+}
+
+.like {
+    margin-right: 25px;
+}
+
+.app-icon-wrapper:nth-child(2) {
     margin-top: 165px;
+    margin-left: 25px;
 }
 
-.app-icon-item {
-    width: 30px;
-    height: 30px;
+.app-icon-wrapper:not(:last-child) {
+    height: 28px;
 }
 
 .link-visit {
     color: var(--white-text-55-color);
+    font-size: 16px;
     font-weight: 600;
+    margin-right: 35px;
 }
 
 .button-load-more {
@@ -231,24 +279,37 @@ body {
     border-radius: 8px;
     border: 1px solid rgba(255, 255, 255, 0.10);
     padding: 17px 38px;
-    margin-top: 100px;
+    display: flex;
+    text-align: center;
+    margin: 0 auto;
 }
 
 /* brand section */
 
-.brand-section {
+.brand-section-border {
     margin-top: 200px;
+    border-radius: 25px;
+    border: 2px solid rgba(255, 255, 255, 0.05);
+    background-color: rgba(44, 53, 61, 0.20);
+    background-image: radial-gradient(ellipse farthest-corner at 0% 0%, rgba(255, 72, 66, 0.40), rgba(44, 53, 61, 0.00) 150px);
+    background-repeat: no-repeat;
 }
 
 .brand-section-title {
-    color: var(--white-text-55-color);
+    color: var(--white-text-80-color);
     font-size: 24px;
     font-weight: 500;
     margin-top: 55px;
+    text-align: center;
 }
 
 .brand-logos {
-    margin: 82px 55px;
+    margin: 55px 82px;
+}
+
+.logos-list {
+    display: flex;
+    justify-content: center;
 }
 
 .logos-item:not(:last-child) {
@@ -257,8 +318,10 @@ body {
 
 /* Section tools */
 
-.secion-tools {
+.section-tools-border {
     margin-top: 220px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .tools-section-title {
@@ -273,6 +336,7 @@ body {
     font-weight: 500;
     line-height: 30px;
     margin-top: 30px;
+    width: 427px;
 }
 
 .button-explore-more {
@@ -282,11 +346,43 @@ body {
     border: none;
     border-radius: 8px;
     padding: 16px 40px;
+    margin-top: 60px;
+}
+
+.tools-card-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: end;
 }
 
 .tools-card-item {
     width: 288px;
     border-radius: 15px;
+    padding-top: 28px;
+    padding-bottom: 28px;
+    padding-left: 22px;
+    padding-right: 21px;
+}
+
+.tools-card-item:not(:nth-child(2n)) {
+    margin-right: 24px;
+}
+
+.tools-card-item:not(:nth-child(-n+2)) {
+    margin-top: 50px;
+}
+
+.tool-info {
+    display: flex;
+    align-items: center;
+}
+
+.tool-app-icon {
+    width: 64px;
+}
+
+.tools-info-text {
+    margin-left: 30px;
 }
 
 .tool-name {
@@ -294,35 +390,46 @@ body {
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 3px;
-    margin-top: 28px;
 }
 
 .tool-text {
     color: var(--white-text-55-color);
     font-size: 14px;
     line-height: 30px;
+    margin-top: 30px;
+}
+
+.tool-icon {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.tool-icon-wrapper {
+    display: flex;
+}
+
+.tool-link-visit {
+    color: var(--white-text-55-color);
+    font-size: 16px;
+    font-weight: 600;
+    margin-right: 34px;
 }
 
 /* section with man */
 
-.disactive-slider {
-    width: 44px;
-    height: 6px;
-    border-radius: 4px;
-    color: var(--slider-disactive-color);
-}
-
-.active-slider {
-    width: 44px;
-    height: 8px;
-    border-radius: 4px;
-    color: var(--button-color);
+.section-reviews {
+    margin-top: 200px;
 }
 
 /* section investor */
 
 .section-investor {
     margin-top: 200px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 }
 
 .investor-title {
@@ -334,20 +441,26 @@ body {
 
 .investor-text {
     color: var(--white-text-55-color);
+    width: 427px;
     font-weight: 500;
     line-height: 30px;
+    margin: 0 auto;
     margin-top: 25px;
 }
 
 .investor-form {
     margin-top: 100px;
+    align-items: center;
+    margin-bottom: 240px;
 }
 
 .investor-input {
     background-color: var(--slider-disactive-color);
     border-radius: 15px;
     border: 1.5px solid rgba(255, 255, 255, 0.10);
-    padding: 25px 21px;
+    padding-top: 22px;
+    padding-bottom: 21px;
+    padding-left: 24px;
     padding-right: 401px;
     font-size: 14px;
 }
@@ -360,9 +473,22 @@ body {
     padding: 12px 35px;
     font-size: 16px;
     font-weight: 600;
+    margin-left: -145px;
 }
 
 /* footer */
+
+.footer {
+    border-top: 1px solid rgba(255, 255, 255, 0.15);
+}
+
+.all-footer-sections {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    margin-bottom: 98px;
+    padding-top: 70px;
+}
 
 .copiright {
     font-size: 16px;
@@ -376,6 +502,7 @@ body {
     font-size: 14px;
     line-height: 25px;
     margin-top: 21px;
+    width: 260px;
 }
 
 .footer-title {
