--- a/style/style.css
+++ b/style/style.css
@@ -565,6 +565,7 @@ body {
 .slider {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: 0 auto;
     margin-top: 100px;
 }
