part 8 1/? (option border)

--- a/style/style.css
+++ b/style/style.css
@@ -96,6 +96,11 @@ body {
     transition-duration: 0.2s;
 }
 
+.option {
+    border: none;
+    border-radius: 4px;
+}
+
 .button-login:hover {
     color: var(--main-text-color);
 }
